/ ‘Algebra/Review Doc/sections/999999_test.md’ / ‘Algebra/Review Doc/sections/999999_test.md.html’

--- a/Algebra/Review Doc/sections/999999_test.md
+++ b/Algebra/Review Doc/sections/999999_test.md
@@ -96,3 +96,14 @@ Altera fuisset hendrerit vix ea. Omnis porro docendi ex mel. Te est equidem deli
 
 Here is some stuff.
 Te exerci fierent placerat sed, mea ne viris solet verear. Ne est sumo volumus complectitur, percipitur intellegebat mel ex, noster dignissim in cum. Harum aliquando duo at, te eam choro abhorreant. Case minim perfecto ea qui, quo posse malorum at.
+
+
+$f(x) = ax + b$
+
+$$
+\int_a^b t^x \,dx
+$$
+
+$$
+f(x) = 2
+$$
