--- a/Algebra/Review Doc/sections/test.tex
+++ b/Algebra/Review Doc/sections/test.tex
@@ -1,267 +1,47 @@
-\newcommand{\ext}[0]{\text{Ext}}
-\def\Endo{\operatorname{End}}
-\def\Ind{\operatorname{Ind}}
-\def\Res{\operatorname{Res}}
-\def\res{\operatorname{Res}}
-\def\endo{\operatorname{End}}
-\def\ind{\operatorname{Ind}}
-\renewcommand{\AA}[0]{{\mathbb{A}}}
-\newcommand{\Af}[0]{{\mathbb{A}}}
-\newcommand{\CC}[0]{{\mathbb{C}}}
-\newcommand{\CP}[0]{{\mathbb{CP}}}
-\newcommand{\DD}[0]{{\mathbb{D}}}
-\newcommand{\FF}[0]{{\mathbb{F}}}
-\newcommand{\GF}[0]{{\mathbb{GF}}}
-\newcommand{\GG}[0]{{\mathbb{G}}}
-\newcommand{\HH}[0]{{\mathbb{H}}}
-\newcommand{\HP}[0]{{\mathbb{HP}}}
-\newcommand{\KK}[0]{{\mathbb{K}}}
-\newcommand{\kk}[0]{{\mathbb{k}}}
-\newcommand{\NN}[0]{{\mathbb{N}}}
-\newcommand{\OP}[0]{{\mathbb{OP}}}
-\newcommand{\PP}[0]{{\mathbb{P}}}
-\newcommand{\QQ}[0]{{\mathbb{Q}}}
-\newcommand{\RP}[0]{{\mathbb{RP}}}
-\newcommand{\RR}[0]{{\mathbb{R}}}
-\newcommand{\SpSp}[0]{{\mathbb{S}}}
-\renewcommand{\SS}[0]{{\mathbb{S}}}
-\newcommand{\TT}[0]{{\mathbb{T}}}
-\newcommand{\ZZ}[0]{{\mathbb{Z}}}
-\newcommand{\ZnZ}[0]{\mathbb{Z}/n\mathbb{Z}}
-\newcommand{\ZpZ}[0]{\mathbb{Z}/p\mathbb{Z}}
-\newcommand{\Qp}[0]{\mathbb{Q}_{(p)}}
-\newcommand{\Zp}[0]{\mathbb{Z}_{(p)}}
-\newcommand{\Arg}[0]{\mathrm{Arg}}
-\newcommand{\PGL}[0]{\mathrm{PGL}}
-\newcommand{\GL}[0]{\mathrm{GL}}
-\newcommand{\Gl}[0]{\mathrm{GL}}
-\newcommand{\gl}[0]{\mathrm{GL}}
-\newcommand{\mat}[0]{\mathrm{Mat}}
-\newcommand{\Gal}[0]{\mathrm{Gal}}
-\newcommand{\Hilb}[0]{\mathrm{Hilb}}
-\newcommand{\Quot}[0]{\mathrm{Quot}}
-\newcommand{\Art}[0]{\mathrm{Art}}
-\newcommand{\red}[0]{\mathrm{red}}
-\newcommand{\alg}[0]{\mathrm{alg}}
-\newcommand{\Pic}[0]{{\mathrm{Pic}~}}
-\newcommand{\lcm}[0]{\mathrm{lcm}}
-\newcommand{\maps}[0]{\mathrm{Maps}}
-\newcommand{\maxspec}[0]{{\mathrm{maxSpec}~}}
-\newcommand{\Tr}[0]{\mathrm{Tr}}
-\newcommand{\adj}[0]{\mathrm{adj}}
-\newcommand{\ad}[0]{\mathrm{ad}~}
-\newcommand{\ann}[0]{\mathrm{Ann}}
-\newcommand{\Ann}[0]{\mathrm{Ann}}
-\newcommand{\arcsec}[0]{\mathrm{arcsec}}
-\newcommand{\ch}[0]{\mathrm{char}~}
-\newcommand{\Sp}[0]{{\mathrm{Sp}}}
-\newcommand{\syl}[0]{{\mathrm{Syl}}}
-\newcommand{\txand}[0]{{\text{ and }}}
-\newcommand{\txt}[1]{{\text{ {#1} }}}
-\newcommand{\Gr}[0]{{\text{Gr}}}
-\newcommand{\Aut}[0]{{\mathrm{Aut}}}
-\newcommand{\aut}[0]{\mathrm{Aut}}
-\newcommand{\Inn}[0]{{\mathrm{Inn}}}
-\newcommand{\Out}[0]{{\mathrm{Out}}}
-\newcommand{\mltext}[1]{\left\{\begin{array}{c}#1\end{array}\right\}}
-\newcommand{\Fun}[0]{{\text{Fun}}}
-\newcommand{\SL}[0]{{\text{SL}}}
-\newcommand{\PSL}[0]{{\text{PSL}}}
-\newcommand{\SO}[0]{{\text{SO}}}
-\newcommand{\SU}[0]{{\text{SU}}}
-\newcommand{\SP}[0]{{\text{SP}}}
-\newcommand{\per}[0]{{\text{Per}}}
-\newcommand{\loc}[0]{{\text{loc}}}
-\newcommand{\Top}[0]{{\text{Top}}}
-\newcommand{\Sch}[0]{{\text{Sch}}}
-\newcommand{\sch}[0]{{\text{Sch}}}
-\newcommand{\Set}[0]{{\text{Set}}}
-\newcommand{\Sets}[0]{{\text{Set}}}
-\newcommand{\set}[0]{{\text{Set}}}
-\newcommand{\Tor}[0]{\text{Tor}}
-\newcommand{\sets}[0]{{\text{Set}}}
-\newcommand{\Sm}[0]{{\text{Sm}_k}}
-\newcommand{\orr}[0]{{\text{ or }}}
-\newcommand{\annd}[0]{{\text{ and }}}
-\newcommand{\bung}[0]{\text{Bun}_G}
-\newcommand{\const}[0]{{\text{const.}}}
-\newcommand{\disc}[0]{{\text{disc}}}
-\newcommand{\op}[0]{^\text{op}}
-\newcommand{\id}[0]{\text{id}}
-\newcommand{\im}[0]{{\text{im}~}}
-\newcommand{\pt}[0]{{\{\text{pt}\}}}
-\newcommand{\sep}[0]{^\text{sep}}
-\newcommand{\st}[0]{~{\text{s.t.}}~}
-\newcommand{\tors}[0]{{\text{tors}}}
-\newcommand{\tor}[0]{\text{Tor}}
-\newcommand{\height}[0]{\text{ht}}
-\newcommand{\cpt}[0]{\text{compact}}
-\newcommand{\abs}[1]{{\left\lvert {#1} \right\rvert}}
-\newcommand{\qtext}[1]{{\quad \text{#1} \quad}}
-\newcommand{\actsonl}[0]{\curvearrowleft}
-\newcommand{\actson}[0]{\curvearrowright}
-\newcommand{\bd}[0]{{\del}}
-\newcommand{\bigast}[0]{{\mathop{\Large \ast}}}
-\newcommand{\coker}[0]{\operatorname{coker}}
-\newcommand{\cok}[0]{\operatorname{coker}}
-\newcommand{\conjugate}[1]{{\overline{{#1}}}}
-\newcommand{\converges}[1]{\overset{#1}}
-\newcommand{\correspond}[1]{\theset{\substack{#1}}}
-\newcommand{\cross}[0]{\times}
-\newcommand{\dash}[0]{{\hbox{-}}}
-\newcommand{\dd}[2]{{\frac{\partial #1}{\partial #2}\,}}
-\newcommand{\definedas}[0]{\coloneqq}
-\newcommand{\del}[0]{{\partial}}
-\newcommand{\directlim}[0]{\varinjlim}
-\newcommand{\disjoint}[0]{{\coprod}}
-\newcommand{\divides}[0]{{~\Bigm|~}}
-\newcommand{\dual}[0]{^\vee}
-\newcommand{\sm}[0]{\setminus}
-\newcommand{\smz}[0]{\setminus\theset{0}}
-\newcommand{\eps}[0]{\varepsilon}
-\newcommand{\equalsbecause}[1] {\stackrel{\mathclap{\scriptscriptstyle{#1}}}{=}}
-\newcommand{\floor}[1]{{\left\lfloor #1 \right\rfloor}}
-\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
-\newcommand{\from}[0]{\leftarrow}
-\newcommand{\tofrom}[0]{\leftrightarrows}
-\newcommand{\up}[0]{\uparrow}
-\newcommand{\generators}[1]{\left\langle{#1}\right\rangle}
-\newcommand{\gs}[1]{\left\langle{#1}\right\rangle}
-\newcommand{\homotopic}[0]{\simeq}
-\newcommand{\injectivelim}[0]{\varinjlim}
-\newcommand{\injects}[0]{\hookrightarrow}
-\newcommand{\inner}[2]{{\left\langle {#1},~{#2} \right\rangle}}
-\newcommand{\intersect}[0]{\bigcap}
-\newcommand{\into}[0]{\to}
-\newcommand{\inverselim}[0]{\varprojlim}
-\newcommand{\inv}[0]{^{-1}}
-\newcommand{\mfa}[0]{{\mathfrak{a}}}
-\newcommand{\mfb}[0]{{\mathfrak{b}}}
-\newcommand{\mfc}[0]{{\mathfrak{c}}}
-\newcommand{\mff}[0]{{\mathfrak{f}}}
-\newcommand{\mfi}[0]{{\mathfrak{I}}}
-\newcommand{\mfm}[0]{{\mathfrak{m}}}
-\newcommand{\mfn}[0]{{\mathfrak{n}}}
-\newcommand{\mfp}[0]{{\mathfrak{p}}}
-\newcommand{\mfq}[0]{{\mathfrak{q}}}
-\newcommand{\mfr}[0]{{\mathfrak{r}}}
-\newcommand{\lieb}[0]{{\mathfrak{b}}}
-\newcommand{\liegl}[0]{{\mathfrak{gl}}}
-\newcommand{\lieg}[0]{{\mathfrak{g}}}
-\newcommand{\lieh}[0]{{\mathfrak{h}}}
-\newcommand{\lien}[0]{{\mathfrak{n}}}
-\newcommand{\liesl}[0]{{\mathfrak{sl}}}
-\newcommand{\lieso}[0]{{\mathfrak{so}}}
-\newcommand{\liesp}[0]{{\mathfrak{sp}}}
-\newcommand{\lieu}[0]{{\mathfrak{u}}}
-\newcommand{\nilrad}[0]{{\mathfrak{N}}}
-\newcommand{\jacobsonrad}[0]{{\mathfrak{J}}}
-\newcommand{\mm}[0]{{\mathfrak{m}}}
-\newcommand{\pr}[0]{{\mathfrak{p}}}
-\newcommand{\mapsvia}[1]{\xrightarrow{#1}}
-\newcommand{\MM}[0]{{\mathcal{M}}}
-\newcommand{\OO}[0]{{\mathcal{O}}}
-\newcommand{\imaginarypart}[1]{{\mathcal{Im}({#1})}}
-\newcommand{\mca}[0]{{\mathcal{A}}}
-\newcommand{\mcb}[0]{{\mathcal{B}}}
-\newcommand{\mcc}[0]{{\mathcal{C}}}
-\newcommand{\mcd}[0]{{\mathcal{D}}}
-\newcommand{\mce}[0]{{\mathcal{E}}}
-\newcommand{\mcf}[0]{{\mathcal{F}}}
-\newcommand{\mcg}[0]{{\mathcal{G}}}
-\newcommand{\mch}[0]{{\mathcal{H}}}
-\newcommand{\mci}[0]{{\mathcal{I}}}
-\newcommand{\mcj}[0]{{\mathcal{J}}}
-\newcommand{\mck}[0]{{\mathcal{K}}}
-\newcommand{\mcl}[0]{{\mathcal{L}}}
-\newcommand{\mcm}[0]{{\mathcal{M}}}
-\newcommand{\mcp}[0]{{\mathcal{P}}}
-\newcommand{\mcs}[0]{{\mathcal{S}}}
-\newcommand{\mct}[0]{{\mathcal{T}}}
-\newcommand{\mcu}[0]{{\mathcal{U}}}
-\newcommand{\mcv}[0]{{\mathcal{V}}}
-\newcommand{\mcx}[0]{{\mathcal{X}}}
-\newcommand{\mcz}[0]{{\mathcal{Z}}}
-\newcommand{\cl}[0]{\mathrm{cl}}
-\newcommand{\dist}[0]{\mathrm{dist}}
-\newcommand{\crit}[0]{\mathrm{crit}}
-\newcommand{\diam}[0]{{\mathrm{diam}}}
-\newcommand{\gal}[0]{\mathrm{Gal}}
-\newcommand{\diff}[0]{\mathrm{Diff}}
-\newcommand{\diag}[0]{\mathrm{diag}}
-\newcommand{\soc}[0]{\mathrm{Soc}\,}
-\newcommand{\hd}[0]{\mathrm{Head}\,}
-\newcommand{\grad}[0]{\mathrm{grad}~}
-\newcommand{\hilb}[0]{\mathrm{Hilb}}
-\newcommand{\minpoly}[0]{{\mathrm{minpoly}}}
-\newcommand{\multinomial}[1]{\left(\!\!{#1}\!\!\right)}
-\newcommand{\nil}[0]{{\mathrm{nil}}}
-\newcommand{\normalneq}{\mathrel{\reflectbox{$\trianglerightneq$}}}
-\newcommand{\normal}[0]{{~\trianglelefteq~}}
-\newcommand{\norm}[1]{{\left\lVert {#1} \right\rVert}}
-\newcommand{\pnorm}[2]{{\left\lVert {#1} \right\rVert}_{#2}}
-\newcommand{\notdivides}[0]{\nmid}
-\newcommand{\onto}[0]{\twoheadhthtarrow}
-\newcommand{\ord}[0]{{\mathrm{Ord}}}
-\newcommand{\pic}[0]{{\mathrm{Pic}~}}
-\newcommand{\projectivelim}[0]{\varprojlim}
-\newcommand{\rad}[0]{{\mathrm{rad}~}}
-\newcommand{\ralg}[0]{\mathrm{R-alg}}
-\newcommand{\rank}[0]{\operatorname{rank}}
-\newcommand{\realpart}[1]{{\mathcal{Re}({#1})}}
-\newcommand{\Log}[0]{\mathrm{Log}}
-\newcommand{\reg}[0]{\mathrm{Reg}}
-\newcommand{\restrictionof}[2]{{\left.{#1}\right|_{#2}}}
-\newcommand{\ro}[2]{{\left.{#1}\right|_{#2}}}
-\newcommand{\rk}[0]{{\mathrm{rank}}}
-\newcommand{\evalfrom}[0]{\Big|}
-\newcommand{\rmod}[0]{{R\dash\mathrm{mod}}}
-\newcommand{\rotate}[2]{{\style{display: inline-block; transform: rotate(#1deg)}{#2}}}
-\newcommand{\selfmap}[0]{{\circlearrowleft}}
-\newcommand{\semidirect}[0]{\rtimes}
-\newcommand{\sgn}[0]{\mathrm{sgn}}
-\newcommand{\sign}[0]{\mathrm{sign}}
-\newcommand{\spanof}[0]{{\mathrm{span}}}
-\newcommand{\spec}[0]{\mathrm{Spec}~}
-\newcommand{\mspec}[0]{\mathrm{mSpec}~}
-\newcommand{\stab}[0]{{\mathrm{Stab}}}
-\newcommand{\stirlingfirst}[2]{\genfrac{[}{]}{0pt}{}{#1}{#2}}
-\newcommand{\stirling}[2]{\genfrac\{\}{0pt}{}{#1}{#2}}
-\newcommand{\strike}[1]{{\enclose{horizontalstrike}{#1}}}
-\newcommand{\suchthat}[0]{{~\mathrel{\Big|}~}}
-\newcommand{\supp}[0]{{\mathrm{supp}}}
-\newcommand{\surjects}[0]{\twoheadrightarrow}
-\newcommand{\sym}[0]{\mathrm{Sym}}
-\newcommand{\tensor}[0]{\otimes}
-\newcommand{\theset}[1]{\left\{{#1}\right\}}
-\newcommand{\ts}[1]{\left\{{#1}\right\}}
-\newcommand{\gens}[1]{\left\langle{#1}\right\rangle}
-\newcommand{\thevector}[1]{{\left[ {#1} \right]}}
-\newcommand{\too}[1]{{\xrightarrow{#1}}}
-\newcommand{\transverse}[0]{\pitchfork}
-\newcommand{\trianglerightneq}{\mathrel{\ooalign{\raisebox{-0.5ex}{\reflectbox{\rotatebox{90}{$\nshortmid$}}}\cr$\triangleright$\cr}\mkern-3mu}}
-\newcommand{\tr}[0]{\mathrm{Tr}}
-\newcommand{\uniformlyconverges}[0]{\rightrightarrows}
-\newcommand{\covers}[0]{\rightrightarrows}
-\newcommand{\union}[0]{\bigcup}
-\newcommand{\units}[0]{^{\times}}
-\newcommand{\nonzero}[0]{^{\bullet}}
-\newcommand{\wait}[0]{{\,\cdot\,}}
-\newcommand{\wt}[0]{{\mathrm{wt}}}
-\renewcommand{\bar}[1]{\mkern 1.5mu\overline{\mkern-1.5mu#1\mkern-1.5mu}\mkern 1.5mu}
-\renewcommand{\div}[0]{\mathrm{Div}}
-\renewcommand{\hat}[1]{\widehat{#1}}
-\renewcommand{\mid}[0]{\mathrel{\Big|}}
-\renewcommand{\qed}[0]{\hfill\blacksquare}
-\renewcommand{\to}[0]{\longrightarrow}
-\renewcommand{\vector}[1]{\mathbf{#1}}
-\let\oldexp\exp
-\renewcommand{\exp}[1]{\oldexp\qty{#1}}
-\newcommand*\dif{\mathop{}\!\mathrm{d}}
-\newcommand{\ddt}{\tfrac{\dif}{\dif t}}
-\newcommand{\ddx}{\tfrac{\dif}{\dif x}}
+\input{"/home/zack/Notes/Latex/preamble.tex"}
+\let\Begin\begin
+\let\End\end
+\newcommand\wrapenv[1]{#1}
 
-\DeclareMathOperator{\righttriplearrows} {{\; \tikz{ \foreach \y in {0, 0.1, 0.2} { \draw [-stealth] (0, \y) -- +(0.5, 0);}} \; }}
+\makeatletter
+\def\ScaleWidthIfNeeded{%
+ \ifdim\Gin@nat@width>\linewidth
+    \linewidth
+  \else
+    \Gin@nat@width
+  \fi
+}
+\def\ScaleHeightIfNeeded{%
+  \ifdim\Gin@nat@height>0.9\textheight
+    0.9\textheight
+  \else
+    \Gin@nat@width
+  \fi
+}
+\makeatother
+
+\setkeys{Gin}{width=\ScaleWidthIfNeeded,height=\ScaleHeightIfNeeded,keepaspectratio}%
+% Create indices up front
+\makeindex[title=Concept index]
+
+\title{
+\textbf{
+    Title
+  }
+  }
+
+\author{D. Zack Garza}
+
+\date{\today}
+
+
+
+
+
+\begin{document}
+\maketitle
+\tableofcontents
+
 
 \hypertarget{sylow-theorems}{%
 \subsection{Sylow Theorems}\label{sylow-theorems}}
@@ -657,3 +437,8 @@ Example: \(p(6) = 11\), given by \(6, 5+1, 4+2, \cdots\).
 
 Write \(G = p_1^{k_1} p_2^{k_2} \cdots\); then there are
 \(p(k_1) p(k_2) \cdots\) choices, each yielding a distinct group.
+
+
+\bibliography{/home/zack/Notes/library.bib}
+
+\end{document}
