/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -13,17 +13,18 @@ Concepts used:
   - It suffices to show that $K^c \definedas [0, 1]\setminus K$ is open; 
     Then $K$ will be a closed and bounded subset of $\RR$ and thus compact by Heine-Borel.
 
-  - Strategy: write $K^c$ as the union of open intervals (since these form a basis for the Euclidean topology on $\RR$).
+  - Strategy: write $K^c$ as the union of open balls (since these form a basis for the Euclidean topology on $\RR$).
 
-  - Identify $K^c$ as the set of real numbers in $[0, 1]$ whose decimal expansion **does** use a 4.
+  - Identify $K^c$ as the set of real numbers in $[0, 1]$ whose decimal expansion **does** contain a 4.
   - Let $x\in K^c$, suppose a 4 occurs as the $k$th digit, and write
   \[  
   x = 0.d_1 d_2 \cdots d_{k-1}~ 4 ~d_{k+1}\cdots 
   = \qty{\sum_{j=1}^k d_j 10^{-j}} + \qty{4\cdot 10^{-k}} + \qty{\sum_{j=k+1}^\infty d_j 10^{-j}}
   .\]
 
-  - Set $r < 10^{-k}$ and pick any $y \in [0, 1]$ such that $y\in B_r(x)$, i.e. $\abs{x-y} < 10^{-k}$. 
-  - If we write $y = \sum_{j=1}^\infty c_j 10^{-j}$, this means that for all $j \leq k$ we have $d_j = c_j$, and in particular $d_k = 4 = c_k$, so $y$ has a 4 in its decimal expansion.
+  - Set $r_x < 10^{-k}$ and let $y \in [0, 1] \intersect B_{r_x}(x)$ be arbitrary.
+  - Thus $\abs{x-y} < r_x < 10^{-k}$, and the first $k$ digits of $x$ and $y$ must agree:
+    - Write $y = \sum_{j=1}^\infty c_j 10^{-j}$, this means that for all $j \leq k$ we have $d_j = c_j$, and in particular $d_k = 4 = c_k$, so $y$ has a 4 in its decimal expansion.
 
   - But then $K^c = \union_x B_r(x)$ is a union of open sets and thus open.
 
