/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -31,10 +31,19 @@ Concepts used:
   
   - Thus $\abs{x-y} < r_x < 10^{-k}$, and the first $k$ digits of $x$ and $y$ must agree:
 
+    - We first compute the difference:
   \[  
-  x - y &= \sum_{i=1}^\infty d_j 10^j - \sum_{i=1}^\infty c_j 10^j = \sum_{i=1}^\infty \qty{d_j - c_j} 10^j \\
+  x - y &= \sum_{i=1}^\infty d_j 10^{-j} - \sum_{i=1}^\infty c_j 10^{-j} = \sum_{i=1}^\infty \qty{d_j - c_j} 10^{-j} \\
+  \]
+    - Thus (claim)
+  \[
   \abs{x-y} &\leq \sum_{j=1}^\infty \abs{d_j - c_j} 10^j < 10^{-k} \iff \abs{d_j - c_j} = 0 \quad \forall j\leq k
   .\]
+    - Otherwise we can note that any term $\abs{d_j - c_j}\geq 1$ and there is a contribution to $\abs{x-y}$ of at least $1\cdot 10^{-j}$ for some $j < k$, whereas
+  \[  
+  j < k \iff 10^{-j} > 10^{-k}
+  ,\]
+    a contradiction.
     
     - Write $y = \sum_{j=1}^\infty c_j 10^{-j}$, this means that for all $j \leq k$ we have $d_j = c_j$, and in particular $d_k = 4 = c_k$, so $y$ has a 4 in its decimal expansion.
 
