/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -8,74 +8,76 @@ Concepts used:
 
 **Solution**
 
-- Claim: **$K$ is compact**.
+Claim: **$K$ is compact**.
 
-  - It suffices to show that $K^c \definedas [0, 1]\setminus K$ is open; 
-    Then $K$ will be a closed and bounded subset of $\RR$ and thus compact by Heine-Borel.
+- It suffices to show that $K^c \definedas [0, 1]\setminus K$ is open; 
+  Then $K$ will be a closed and bounded subset of $\RR$ and thus compact by Heine-Borel.
 
-  - Strategy: write $K^c$ as the union of open balls (since these form a basis for the Euclidean topology on $\RR$).
-    
-    - Do this by showing every point $x\in K^c$ is an interior point, i.e. $x$ admits a neighborhood $N_x$ such that $N_x \subseteq K^c$.
-
-  - Identify $K^c$ as the set of real numbers in $[0, 1]$ whose decimal expansion **does** contain a 4.
-    
-    - We will show that there exists a neighborhood small enough such that all points in it contain a $4$ in their decimal expansions.
+- Strategy: write $K^c$ as the union of open balls (since these form a basis for the Euclidean topology on $\RR$).
   
-  - Let $x\in K^c$, suppose a 4 occurs as the $k$th digit, and write
-  \[  
-  x = 0.d_1 d_2 \cdots d_{k-1}~ 4 ~d_{k+1}\cdots 
-  = \qty{\sum_{j=1}^k d_j 10^{-j}} + \qty{4\cdot 10^{-k}} + \qty{\sum_{j=k+1}^\infty d_j 10^{-j}}
-  .\]
+  - Do this by showing every point $x\in K^c$ is an interior point, i.e. $x$ admits a neighborhood $N_x$ such that $N_x \subseteq K^c$.
 
-  - Set $r_x < 10^{-k}$ and let $y \in [0, 1] \intersect B_{r_x}(x)$ be arbitrary.
+- Identify $K^c$ as the set of real numbers in $[0, 1]$ whose decimal expansion **does** contain a 4.
   
-  - Thus $\abs{x-y} < r_x < 10^{-k}$, and the first $k$ digits of $x$ and $y$ must agree:
+  - We will show that there exists a neighborhood small enough such that all points in it contain a $4$ in their decimal expansions.
 
-    - We first compute the difference:
-  \[  
-  x - y &= \sum_{i=1}^\infty d_j 10^{-j} - \sum_{i=1}^\infty c_j 10^{-j} = \sum_{i=1}^\infty \qty{d_j - c_j} 10^{-j} \\
-  \]
-    - Thus (claim)
-  \[
-  \abs{x-y} &\leq \sum_{j=1}^\infty \abs{d_j - c_j} 10^j < 10^{-k} \iff \abs{d_j - c_j} = 0 \quad \forall j\leq k
-  .\]
-    - Otherwise we can note that any term $\abs{d_j - c_j}\geq 1$ and there is a contribution to $\abs{x-y}$ of at least $1\cdot 10^{-j}$ for some $j < k$, whereas
-  \[  
-  j < k \iff 10^{-j} > 10^{-k}
-  ,\]
-    a contradiction.
-    
-    - Write $y = \sum_{j=1}^\infty c_j 10^{-j}$, this means that for all $j \leq k$ we have $d_j = c_j$, and in particular $d_k = 4 = c_k$, so $y$ has a 4 in its decimal expansion.
+- Let $x\in K^c$, suppose a 4 occurs as the $k$th digit, and write
+\[  
+x = 0.d_1 d_2 \cdots d_{k-1}~ 4 ~d_{k+1}\cdots 
+= \qty{\sum_{j=1}^k d_j 10^{-j}} + \qty{4\cdot 10^{-k}} + \qty{\sum_{j=k+1}^\infty d_j 10^{-j}}
+.\]
 
-  - But then $K^c = \union_x B_r(x)$ is a union of open sets and thus open.
+- Set $r_x < 10^{-k}$ and let $y \in [0, 1] \intersect B_{r_x}(x)$ be arbitrary and write 
+\[  
+y = \sum_{j=1}^\infty c_j 10^{-j}
+.\]
 
-- Claim: **$K$ is nowhere dense and $m(K) = 0$:**
+- Thus $\abs{x-y} < r_x < 10^{-k}$, and the first $k$ digits of $x$ and $y$ must agree:
 
-Since $K$ is closed, we'll show that $K$ can not properly contain any interval, so $(\overline K)^\circ = \emptyset$.
+  - We first compute the difference:
+\[  
+x - y &= \sum_{i=1}^\infty d_j 10^{-j} - \sum_{i=1}^\infty c_j 10^{-j} = \sum_{i=1}^\infty \qty{d_j - c_j} 10^{-j} \\
+\]
+  - Thus (claim)
+\[
+\abs{x-y} &\leq \sum_{j=1}^\infty \abs{d_j - c_j} 10^j < 10^{-k} \iff \abs{d_j - c_j} = 0 \quad \forall j\leq k
+.\]
+  - Otherwise we can note that any term $\abs{d_j - c_j}\geq 1$ and there is a contribution to $\abs{x-y}$ of at least $1\cdot 10^{-j}$ for some $j < k$, whereas
+\[  
+j < k \iff 10^{-j} > 10^{-k}
+,\]
+  a contradiction.
+  
+- This means that for all $j \leq k$ we have $d_j = c_j$, and in particular $d_k = 4 = c_k$, so $y$ has a 4 in its decimal expansion.
 
-As in the construction of the Cantor set, let 
+- But then $K^c = \union_x B_{r_x}(x)$ is a union of open sets and thus open.
 
-- $K_1$ denote $[0, 1]$ with 1 interval $[0.4, 0.5]$ of length $\frac{1}{10}$ deleted
-- $K_2$ denote $K_1$ with 9 intervals $[0.04, 0.05], ~[0.14, 0.15], \cdots [0.94, 0.95]$ length $\frac 1 {100}$ deleted
-- $K_n$ denote $K_{n-1}$ with $9^{n-1}$ such intervals of length $10^{-n}$ deleted.
 
-Then $K = \intersect K_n$, and 
-$$
+Claim: **$K$ is nowhere dense and $m(K) = 0$:**
+
+- Since $K$ is closed, we'll show that $K$ can not properly contain any interval, so $(\overline K)^\circ = \emptyset$.
+
+- As in the construction of the Cantor set, let 
+
+  - $K_1$ denote $[0, 1]$ with 1 interval $[0.4, 0.5]$ of length $\frac{1}{10}$ deleted
+  - $K_2$ denote $K_1$ with 9 intervals $[0.04, 0.05], ~[0.14, 0.15], \cdots [0.94, 0.95]$ length $\frac 1 {100}$ deleted
+  - $K_n$ denote $K_{n-1}$ with $9^{n-1}$ such intervals of length $10^{-n}$ deleted.
+
+- Then $K = \intersect K_n$, and 
+\[
 m(K) = 1 - m(K^c) = 1 - \sum_{j=0}^\infty \frac{9^n}{10^{n+1}} = 1 - \frac{1}{10} \left( \frac{1}{1 - \frac 9 {10}} \right) = 0,
-$$
+\]
+  and since any interval has strictly positive measure, $K$ can not contain any interval.
 
-and since any interval has strictly positive measure, $K$ can not contain any interval.
+Claim: **$K$ has no isolated points**:
 
-- Claim: **$K$ has no isolated points**:
+- A point $x\in K$ is isolated iff there there is an open ball $B_r(x)$ containing $x$ such that $B_r(x) \intersect K = \emptyset$, so every point in this ball has a 4 in its decimal expansion.
 
-A point $x\in K$ is isolated iff there there is an open ball $B_r(x)$ containing $x$ such that $B_r(x) \intersect K = \emptyset$, so every point in this ball has a 4 in its decimal expansion.
-
-Note that $m(K_n) = \left( \frac 9 {10} \right)^n \to 0$ and that the endpoints of intervals are never removed and are thus elements of $K$.
+- Note that $m(K_n) = \left( \frac 9 {10} \right)^n \to 0$ and that the endpoints of intervals are never removed and are thus elements of $K$.
 Then for every $\varepsilon$, we can choose $n$ such that $\left( \frac 9 {10} \right)^n < \varepsilon$; then there is an endpoint of a removed interval $e_n$ satisfying $\abs{x - e_n} \leq  \left( \frac 9 {10} \right)^n < \varepsilon$. 
 
-So every ball containing $x$ contains some endpoint of a removed interval, and thus an element of $K$.
+- So every ball containing $x$ contains some endpoint of a removed interval, and thus an element of $K$.
 
-$\qed$
 
 ## 2
 
