/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -55,7 +55,7 @@ j < k \iff 10^{-j} > 10^{-k}
 
 Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 
-- Since $K$ is closed, we'll show that $K$ can not properly contain any interval, so $(\overline K)^\circ = \emptyset$.
+- Since $K$ is closed, we'll show that $K$ can not properly contain any interval, so $(\bar{K})^\circ = \emptyset$.
 
 - As in the construction of the Cantor set, let 
 
