/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -69,7 +69,7 @@ Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 \[
 m(K) = 1 - m(K^c) = 1 - \sum_{j=0}^\infty {9^n \over 10^{n+1} } = 1 - {1 \over 10} \qty{ {1 \over 1 - {9 \over 10 } } } = 0,
 \]
-  and since any interval has strictly positive measure, $K$ can not contain any interval.
+- Since any interval has strictly positive measure, $K$ can not contain any interval.
 
 Claim: **$K$ has no isolated points**:
 
