/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -62,7 +62,7 @@ Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 - As in the construction of the Cantor set, let 
 
   - $K_1$ denote $[0, 1]$ with 1 interval $\left[{4 \over 10}, {5 \over 10} \right]$ of length $1 \over 10$ deleted
-  - $K_2$ denote $K_1$ with 9 intervals $\left[{1 \over 100}, {5\over 100}\right], ~\left[{14 \over 100}\right], \left[{15 \over 100}\right], \cdots \left[{94\over 100}, {95 \over 100}\right]$ length ${1 \over 100}$ deleted
+  - $K_2$ denote $K_1$ with 9 intervals $\left[{1 \over 100}, {5\over 100}\right], ~\left[{14 \over 100}\right], \left[{15 \over 100}\right], \cdots \left[{94\over 100}, {95 \over 100}\right]$ of length ${1 \over 100}$ deleted
   - $K_n$ denote $K_{n-1}$ with $9^{n-1}$ such intervals of length $10^{-n}$ deleted.
 
 - By construction, $K = \intersect_{n=1}^\infty K_n$, and 
