/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -58,6 +58,7 @@ Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 
 - Strategy: Show $\qty{\bar K}^\circ = \emptyset$.
 - Since $K$ is closed, $\bar K = K$, so it suffices to show that $K$ does not properly contain any interval.
+- It suffices to show $m(K^c) = 1$, since this implies $m(K) = 0$ and since any interval has strictly positive measure, this will mean $K$ can not contain an interval.
 
 - As in the construction of the Cantor set, let 
 
@@ -67,9 +68,8 @@ Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 
 - By construction, $K = \intersect_{n=1}^\infty K_n$, and 
 \[
-m(K) = 1 - m(K^c) = 1 - \sum_{j=0}^\infty {9^n \over 10^{n+1} } = 1 - {1 \over 10} \qty{ {1 \over 1 - {9 \over 10 } } } = 0,
+m(K^c) = \sum_{j=0}^\infty {9^n \over 10^{n+1} } = {1 \over 10} \qty{ {1 \over 1 - {9 \over 10 } } } = 0,
 \]
-- Since any interval has strictly positive measure, $K$ can not contain any interval.
 
 Claim: **$K$ has no isolated points**:
 
