--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -68,7 +68,10 @@ Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 
 - By construction, $K = \intersect_{n=1}^\infty K_n$, and 
 \[
-m(K^c) = \sum_{j=0}^\infty {9^n \over 10^{n+1} } = {1 \over 10} \qty{ {1 \over 1 - {9 \over 10 } } } = 0,
+m(K^c) 
+= \sum_{j=0}^\infty {9^n \over 10^{n+1} } 
+= {1\over 10} \sum_{j=0}^\infty {9^n \over 10^{n} } 
+= {1 \over 10} \qty{ {1 \over 1 - {9 \over 10 } } } = 1,
 \]
 
 Claim: **$K$ has no isolated points**:
