/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -63,14 +63,14 @@ Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 - As in the construction of the Cantor set, let 
 
   - $K_1$ denote $[0, 1]$ with 1 interval $\left[{4 \over 10}, {5 \over 10} \right]$ of length $1 \over 10$ deleted, so $m(K_1^c) = {1\over 10}$
-  - $K_2$ denote $K_1$ with 9 intervals $\left[{1 \over 100}, {5\over 100}\right], ~\left[{14 \over 100}, {15 \over 100}\right], \cdots \left[{94\over 100}, {95 \over 100}\right]$ of length ${1 \over 100}$ deleted, so $m(K_2^c) = {9 \over 100}$.
+  - $K_2$ denote $K_1$ with 9 intervals $\left[{1 \over 100}, {5\over 100}\right], ~\left[{14 \over 100}, {15 \over 100}\right], \cdots \left[{94\over 100}, {95 \over 100}\right]$ of length ${1 \over 100}$ deleted, so $m(K_2^c) = {1\over 10} + {9 \over 100}$.
   - $K_n$ denote $K_{n-1}$ with $9^{n-1}$ such intervals of length $1 \over 10^{n}$ deleted, so $m(K_n^c) = {9^{n-1} \over 10^n}$
 
-- Note that all of the $K_i^c$ are disjoint, since at eac
-
-- By construction, $K^c = \union_{n=1}^\infty K_n^c$, and 
+- Note that 
 \[
 m(K^c) 
+= m\qty{\union_{n=1}^\infty K_n^c} \\
+&= \lim
 = \sum_{j=0}^\infty {9^n \over 10^{n+1} } 
 = {1\over 10} \sum_{j=0}^\infty \qty{9\over 10}^n 
 = {1 \over 10} \qty{ {1 \over 1 - {9 \over 10 } } } = 1,
