/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.md’ / ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.md’ / ‘Real Analysis/UGA Solutions/sections/07_2017 Spring.pdf’

--- a/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/07_2017 Spring.md
@@ -62,7 +62,7 @@ Claim: **$K$ is nowhere dense and $m(K) = 0$:**
 
 - As in the construction of the Cantor set, let 
 
-  - $K_0$ denote $[0, 1]$ with 1 interval $\left[{4 \over 10}, {5 \over 10} \right]$ of length $1 \over 10$ deleted, so 
+  - $K_0$ denote $[0, 1]$ with 1 interval $\left({4 \over 10}, {5 \over 10} \right]$ of length $1 \over 10$ deleted, so 
   \[m(K_0^c) = {1\over 10}.\]
   - $K_1$ denote $K_0$ with 9 intervals $\left[{1 \over 100}, {5\over 100}\right], ~\left[{14 \over 100}, {15 \over 100}\right], \cdots \left[{94\over 100}, {95 \over 100}\right]$ of length ${1 \over 100}$ deleted, so 
   \[m(K_1^c) = {1\over 10} + {9 \over 100}.\]
@@ -80,8 +80,10 @@ m(K^c)
 
 Claim: **$K$ has no isolated points**:
 
-- A point $x\in K$ is isolated iff there there is an open ball $B_r(x)$ containing $x$ such that $B_r(x) \intersect K = \emptyset$.
-  - So every point in this ball should have a 4 in its decimal expansion.
+- A point $x\in K$ is isolated iff there there is an open ball $B_r(x)$ containing $x$ such that $B_r(x) \subsetneq K^c$.
+  - So every point in this ball **should** have a 4 in its decimal expansion.
+
+- Strategy: show that if $x\in K$, every neighborhood of $x$ intersects $K$.
 
 - Note that $m(K_n) = \left( \frac 9 {10} \right)^n \converges{n\to\infty}\to 0$ and the endpoints of intervals are never deleted.
   - Thus endpoints of deleted intervals are elements of $K$.
